# study-JAX

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.agents/skills/debugging-mentor/: SKILL.md
.agents/skills/debugging-mentor/references/: problem_generation_guide.md
.agents/skills/educational-document-creator/educational-document-creator/: SKILL.md
docs/: MEMORY.md  api.md  example.md  test_annotation.md
docs/educational/debugging/: README.md
docs/educational/debugging/001-jax-shape-mismatch/: README.md  problem.py
docs/educational/fundamentals/: 00_environment_and_dependencies.md  05_jax_prng_and_state_deep_dive.md  07_jax_tracing_and_tracers_deep_dive.md  10_jax_optimization_and_optax_deep_dive.md  11_dot_vs_matmul_deep_dive.md
docs/educational/mnist/: 04_dataset_prefetch_deep_dive.md
docs/educational/transformer/: 01_self_attention_deep_dive.md  02_dense_block_deep_dive.md  03_layer_norm_deep_dive.md  06_haiku_oop_vs_jax_purity.md  08_transformer_block_wiring_deep_dive.md  09_post_ln_vs_pre_ln_math_deep_dive.md
docs/javascripts/: notebook_annotations.js
docs/stylesheets/: custom.css
src/: mnist.py  transformer.py
